CHANGELOG
=========


2021-07-18
----------
### Changelog extractor
* Better detect previous version.

2021-07-17
----------
### Specfile
* Helper: get_source_filename can handle multiple sources.
* Helper: get_source_filename version argument is optional now.
* Version updater: handle multiple sources.

2021-07-16
----------
### Specfile
* Rewrite version detection to regex instead of rpmspec.

### libraries.io latest version
* Handle error when library is not found with error message.

### Common
* Software name detection: handle the 'python3-' prefix as well.

### Changelog extractor
* Also detect "NEWS" files.
* Check if the changelog candidates are files.
* Better and more generic conversion for MarkDown.

2021-07-04
----------
### Changelog extractor
* Markdown: Support for isort
* Removed isort-flavor

2021-07-03
----------
### Base
* Rewrite config file parser to single file.
* New file `helpers` in common directory to detect the software name.

### Specfile Version Updater
* New script to update the version in the spec file, remove the old tarball and add the new one.

### Libraries.io latest version
* New script to fetch latest version of a software from libraries.io.

### Changelog extractor
* Add support for time-machine changelogs (rst).
* Tests: add tests for base.
* Add support for passivetotal changelogs (markdown).

2020-04-02
----------
### Changelog extractor
* Add parameter `--archive` to specify code archive as argument.

2020-03-30
----------
### Changelog extractor
* Debian conversion: Detect new style author lines and versions with postfixes.

2020-03-15
----------

### Changelog extractor
* Do not consider hidden files (starting with `.`) as potential changelog files in the tarballs.


2020-01-18
----------

### Changelog extractor
* Fix detection of previous version if version only get postfixes (like '2' and '2.1').
* Fix conversion for pymisp: indentation missed one additional space.

2019-11-16
----------

### Changelog extractor